# command-skill-describe-Zh

./: .gitignore  CLAUDE.md  README.md  SKILL.md
.claude/: settings.local.json
command-skill-describe-zh/: pyproject.toml
command-skill-describe-zh/claude-code-skills-zh/: README.md  SKILL.md  install.sh
command-skill-describe-zh/claude-code-skills-zh/src/: __init__.py  cli_detector.py  scanner.py  translator.py
command-skill-describe-zh/hermes-skills-zh/: README.md  SKILL.md  install.sh
command-skill-describe-zh/hermes-skills-zh/src/: __init__.py  __main__.py  cache.py  cli_detector.py  models.py  scanner.py  translator.py
command-skill-describe-zh/openclaw-skills-zh/: README.md  SKILL.md  install.sh
command-skill-describe-zh/openclaw-skills-zh/src/: __main__.py  cli_detector.py  models.py  requirements.txt
command-skill-describe-zh/opencode-skills-zh/: README.md  SKILL.md  install.sh
command-skill-describe-zh/opencode-skills-zh/src/: cli_detector.py  scanner.py
command-skill-describe-zh/src/cli_describe_zh/: __init__.py  cache.py  main.py  scanner.py  translator.py
command-skill-describe-zh/tests/: test_cache.py  test_cli_detector.py  test_integration.py  test_main.py  test_models.py  test_scanner.py  test_translator.py
docs/superpowers/plans/: 2026-05-02-command-skill-describe-zh-implementation-plan.md
docs/superpowers/specs/: 2026-05-02-command-skill-describe-zh-design.md
