[project]
name = "cli-describe-zh"
version = "0.1.0"
description = "Translate CLI skill descriptions to Chinese"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.18.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]